# dao_manager

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
src/dao_manager/: Cargo.toml
src/dao_manager/src/: canister_manager.rs  dao_admin.rs  heartbeat.rs  lib.rs  owner.rs  tool.rs  types.rs
src/dao_manager/src/canister/: dip20.rs  ledger.rs  mod.rs
