[package]
name = "dao_manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.16"
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
ic-kit = "0.4.8"
serde = "1.0"
serde_cbor = "0.11.2"
ic-ledger-types = "0.1.2"
base32 = "0.4.0"
crc32fast = "1.3.2"
serde_bytes = "0.11.5"
