[package]
name = "dao_manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.16"
ic-cdk = "0.5.6"
ic-cdk-macros = "0.5.6"
ic-kit = "0.4.8"
serde = "1.0"
serde_cbor = "0.11.2"
ic-ledger-types = "0.1.2"
base32 = "0.4.0"
crc32fast = "1.3.2"
serde_bytes = "0.11.5"
ic-types = { git = "https://github.com/dfinity/ic"}
dfn_core = { git = "https://github.com/dfinity/ic"}
ledger-canister = { git = "https://github.com/dfinity/ic"}
dfn_protobuf = { git = "https://github.com/dfinity/ic"}
ic-nns-constants = { git = "https://github.com/dfinity/ic"}
on_wire = { git = "https://github.com/dfinity/ic"}